<resources>
    <string name="app_name">BasicCalculator</string>
    <string name="cal_text">123456789</string>
    <string name="Add">+</string>
    <string name="ClearData">CLR</string>
    <string name="Dot">.</string>
    <string name="Zero">0</string>
    <string name="equal">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiple">*</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">/</string>
    <string name="subtract">-</string>
</resources>